Fix missing plural forms in i18n calls.

BUG: 104886